--- a/.travis.yml
+++ b/.travis.yml
@@ -4,17 +4,17 @@ services:
   - docker
 
 before_install:
-  - docker build -t moberlander08/react-test -f ./client/Dockerfile.dev
+  - docker image build -t moberlander08/react-test -f ./client/Dockerfile.dev ./client
 
 script:
   - docker run moberlander08/react-test npm-test -- --coverage 
 
 after_success:
   #buld the docker images 
-  - docker build -t moberlander08/multi-client -f ./client
-  - docker build -t moberlander08/multi-nginx -f ./nginx
-  - docker build -t moberlander08/multi-server -f ./server
-  - docker build -t moberlander08/multi-worker -f ./worker
+  - docker image build -t moberlander08/multi-client ./client
+  - docker image build -t moberlander08/multi-nginx ./nginx
+  - docker image build -t moberlander08/multi-server ./server
+  - docker image build -t moberlander08/multi-worker ./worker
   #Login into the docker hub
   - echo "$DOCKER_PW" | docker login -u "$DOCKER_ID" --password-stdin
   #Push images to docker hub
