--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,14 @@
 
 sudo: required
+language: node 
 services: 
   - docker
 
 before_install:
   - docker image build -t moberlander08/react-test -f ./client/Dockerfile.dev ./client
+
+#script:
+  - docker container run moberlander08/react-test npm test -- --coverage 
 
 after_success:
   #buld the docker images 
